Update src/main/java/io/github/carlos_emr/carlos/casemgmt/common/Colour.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>